<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth"
    app:startDestination="@id/login">

    <fragment
        android:id="@+id/login"
        android:name="com.agray427.rewardsthatwork.fragment.authentication.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_register"
            app:destination="@id/register" />
        <action
            android:id="@+id/action_log_in"
            app:destination="@id/group_select" />
    </fragment>
    <fragment
        android:id="@+id/register"
        android:name="com.agray427.rewardsthatwork.fragment.authentication.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_log_in"
            app:destination="@id/group_select" />
    </fragment>
    <activity
        android:id="@+id/group_select"
        android:name="com.agray427.rewardsthatwork.activity.GroupSelectActivity"
        android:label="@string/title_group_select"
        tools:layout="@layout/activity_group_select" />
</navigation>